# UMAT

./: CITATION.cff  Material.cpp  Material.h  Parser.h  PhD.bib  UMAT.tex  USUBLIB.cpp  bergstorm.tex  conco.tex  viscous_branch.cpp  viscous_branch.h
incompressible/: CMakeLists.txt  viscous_branch.cpp  viscous_branch.h
plane_stress/: CMakeLists.txt  Material_ps.cpp  Material_ps.h  Parser_ps.h  USUBLIB_ps.cpp  viscous_branch_ps.cpp  viscous_branch_ps.h
plane_stress/multi_models/: CMakeLists.txt  Hencky.cpp  Hencky.h  Parser_ps.h  Polynomial.cpp  Polynomial.h  USUBLIB_multi_mod.cpp  dashpot.cpp  dashpot.h  dashpot.t.hpp  elastic_branch.cpp  elastic_branch.h  elastic_branch.t.hpp  viscous_branch.cpp  viscous_branch.h  viscous_branch.t.hpp
